fix font file path and adjust some desktop spacing

--- a/app/scss/globals/_typography.scss
+++ b/app/scss/globals/_typography.scss
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: "Josefin-Sans";
-    src: url("../../../fonts/JosefinSans-VariableFont_wght.ttf");
+    src: url("../fonts/JosefinSans-VariableFont_wght.ttf");
 }
 
 .header__title {
